@@ -1,7 +1,10 @@
-2005-06-21  Dennis Cranston <dennis_cranston@yahoo.com>
+2005-06-26  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* gsearchtool.c: (add_file_to_search_results):  Fix
 	relative path. (Closes bug #308230)
+	
+	* help/C/gnome-search-tool.xml:  Apply update from 
+	Joachim Noreiko.
 	
 2005-06-05  Dennis Cranston <dennis_cranston@yahoo.com>
 
